<resources>
    <string name="app_name">Money Manager</string>
    <string name="daily_life">Money Manager</string>
    <string name="welcome">Welcome</string>
    <string name="login_str">Please to login to keep your data safe and synced across devices</string>
    <string name="SignInSignUp">Sign In / Sign Up</string>
    <string name="continue_as_quest">Continue as quest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Sign Up</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name_error">Minimum 25 characters</string>
    <string name="email_error">Invalid Email</string>
    <string name="password_error">Minimum 6 characters</string>
    <string name="account_error"> Account already exists,Please sign in</string>
    <string name="password_error_sign_in">Wrong password</string>
    <string name="email_error_sign_in">Wrong email</string>
    <string name="user_name">User Name</string>
    <string name="greet">Greet</string>


</resources>